# AI-proposal-generator

./: .gitignore  engineering.md  product.md  ui.md  vercel.json
api/: requirements.txt
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: app.js  index.html  style.css
