[project]
name = "proposal-generator"
version = "0.1.0"
description = "3-Tier Pricing Proposal Generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
